# dedibot

./: .gitignore  AppIcon.rc  CMakeLists.txt  Dedibot.pro  README.md  common.h  dedibot_zh.qm  dedibot_zh.ts  lang_zh.ts  main.cpp  resource.h  resources.qrc
Data/: MeshList.cpp  MeshList.h  ModelData.cpp  ModelData.h  ProjectData.cpp  ProjectData.h
FileRW/: FileReaderWriter.cpp  FileReaderWriter.h  SimpleTriangulation.cpp  SimpleTriangulation.h  readgcode.cpp  readgcode.h
FreesteelSlicer/: cmd.txt
MeshG/: ModelLayers.cpp  ModelLayers.h  TriMeshGenerator.cpp  TriMeshGenerator.h
MeshP/: MeshProcess.cpp  MeshProcess.h
Render/: GLWidget.cpp  GLWidget.h  RenderEngine.cpp  RenderEngine.h  lighting.frag  lighting.vert  texture.frag  texture.vert  wireframe.frag  wireframe.vert
Resources/: black.css  style.css
SupportG/: CollisionDetector.cpp  CollisionDetector.h  SupportGenerator.cpp  SupportGenerator.h
Thread/: FileRWThread.cpp  FileRWThread.h  PrintThread.cpp  PrintThread.h  SliceProcess.cpp  SliceProcess.h  SupportGThread.cpp  SupportGThread.h  ThreadPool.cpp  ThreadPool.h
UI/: DediMessageBox.cpp  DediMessageBox.h  EditTreeWidget.cpp  EditTreeWidget.h  IconHelper.cpp  IconHelper.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ModelListWidget.cpp  ModelListWidget.h  ModelListWidget.ui  MoveModelWidget.cpp  MoveModelWidget.h  MoveModelWidget.ui  RotateModelWidget.cpp  RotateModelWidget.h  RotateModelWidget.ui  ScaleModelWidget.cpp  ScaleModelWidget.h  ScaleModelWidget.ui  SliceModelDialog.cpp  SliceModelDialog.h  SliceModelDialog.ui  SupportParamWidget.cpp  SupportParamWidget.h  SupportParamWidget.ui  Uart.cpp  Uart.h  Uart.ui
